cabal-version:       2.4

name:                bf-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              ggzor
maintainer:          30713864+ggzor@users.noreply.github.com
extra-source-files:  CHANGELOG.md

executable bf-haskell
  main-is:             Main.hs
  build-depends:       base >=4
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , containers >= 0.6
  hs-source-dirs:      app
  default-language:    Haskell2010
